Revision: Fix a number of bugs/issues